--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                   <div class="col-xxl-5 col-xl-5 col-lg-5">
                      <div class="about__content pl-70 pr-25">
                         <div class="section__title-wrapper mb-15">
-                           <span class="section__title-pre">Jamoamiz</span>
-                           <h2 class="section__title">Dunyo miqyosidagi ta'lim imkoniyatlari.</h2>
+                           <span class="section__title-pre">Bizning Jamoa</span>
+                           <h2 class="section__title">Dunyo miqyosidagi ta'lim imkoniyatlarini taqdim eta olish.</h2>
                         </div>
                         <p>Bizda quyidagilar mavjud:</p>
 
@@ -525,8 +525,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/bg/" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/3d.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -556,8 +556,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-2.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/foundation-course.jpg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -588,13 +588,13 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-6.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/d.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
                            <h3 class="course__title">
-                              <a href="course-details.html">Web</a>
+                              <a href="#">Web</a>
                            </h3>
                            <div class="course__bottom d-sm-flex align-items-center justify-content-between">
                               <div class="course__tutor">
@@ -617,8 +617,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/rb.jpg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -675,13 +675,13 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/at.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
                            <h3 class="course__title">
-                              <a href="course-details.html">AKT</a>
+                              <a href="#">AKT</a>
                            </h3>
                            <div class="course__bottom d-sm-flex align-items-center justify-content-between">
                               <div class="course__tutor">
@@ -704,8 +704,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/m.jpg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -735,8 +735,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/y.png" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -764,8 +764,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/f.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -793,8 +793,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-3.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/rs.png" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -822,8 +822,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-4.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/graphic-design-2.jpg.png" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -851,8 +851,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-5.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/e.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -880,8 +880,8 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
-                           <a href="course-details.html">
-                              <img src="assets/img/course/course-6.jpg" alt="">
+                           <a href="#">
+                              <img src="assets/img/course/image.webp" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -955,7 +955,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-xxl-4 offset-xxl-1 col-xl-4 offset-xl-1 col-lg-5 offset-lg-1">
+                  <div class="col-xxl-4 offset-xxl-1 col-xl-4 offset-xl-1 col-lg-5 offset-lg-1" id="Contact">
                      <div class="contact__info white-bg p-relative z-index-1">
                         <div class="contact__shape">
                            <img class="contact-shape-1" src="assets/img/contact/contact-shape-1.png" alt="">
@@ -1016,7 +1016,7 @@
                               </ul>
                            </div>
                         </div>
-                     </div>
+                     </div>   
                   </div>
                </div>
             </div>
