ui/ux image add

--- a/index.html
+++ b/index.html
@@ -515,9 +515,7 @@
                <div class="row">
                   <div class="col-xxl-12">
                      <div class="section__title-wrapper text-center mb-60">
-                        <span class="section__title-pre">Top Kurslar</span>
-                        <h2 class="section__title section__title-44">Maxsus kurslarimiz</h2>
-                        <p>Sizning ixtiyoringizda marhamat bizda o`qing va darxol 10000$ daromadga chiqmang!!</p>
+                        <h2 class="section__title">Kurslar</h2>
                      </div>
                   </div>
                </div>
@@ -526,7 +524,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/3d.webp" alt="">
+                              <img src="assets/img/course/1.pn" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -557,7 +555,8 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/foundation-course.jpg" alt="">
+                              <img src="assets/img/course/.png" alt="">
+
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -589,7 +588,8 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/d.webp" alt="">
+                              <img src="assets/img/course/2.png" alt="">
+
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -618,7 +618,8 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/rb.jpg" alt="">
+                              <img src="assets/img/course/" alt="">
+
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -647,7 +648,8 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="course-details.html">
-                              <img src="assets/img/course/5757453.jpg" alt="">
+                              <img src="assets/img/course/12.svg" alt="">
+
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -676,7 +678,8 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/at.webp" alt="">
+                              <img src="assets/img/course/" alt="">
+
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -1036,20 +1039,14 @@
                      <div class="row">
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-7 ">
                            <div class="footer__widget footer-col-1 mb-50">
-                              <div class="footer__logo">
+                              <div class="footer__logo text-center">
                                  <div class="logo">
                                     <a href="index.html">
                                        <img src="assets/img/logo/black logo.svg" alt="">
                                     </a>
                                  </div>
                               </div>
-                              <div class="footer__widget-content ">
-                                 <div class="footer__widget-info  d-flex flex-column align-items-center">
-                                    <p>Tajribali va malakali ustozlar
-                                       5000 + mamnun bitiruvchilar</p>
-                                  
-                                 </div>
-                              </div>
+                              
                            </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-7  justify-content-between align-items-center">
