--- a/index.html
+++ b/index.html
@@ -347,27 +347,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-xxl-5 col-xl-5 col-lg-5">
-                     <div class="about__content pl-70 pr-25">
-                        <div class="section__title-wrapper mb-15">
-                           <span class="section__title-pre">Bizning Jamoa</span>
-                           <h2 class="section__title">Dunyo miqyosidagi ta'lim imkoniyatlarini taqdim eta olish.</h2>
-                        </div>
-                        <p>Bizda quyidagilar mavjud:</p>
-
-                        <div class="about__list mb-40">
-                           <ul>
-                              <li><i class="fa-solid fa-check"></i> Jamoaviy Tajriba</li>
-                              <li><i class="fa-solid fa-check"></i> Professional Rivojlanish</li>
-                              <li><i class="fa-solid fa-check"></i> Tajriba va Malaka Oshirish</li>
-                           </ul>
-                        </div>
-
-                        <div class="about__btn">
-                           <a href="about.html" class="tp-btn tp-btn-2">Batafsil </a>
-                        </div>
-                     </div>
-                  </div>
+             
                </div>
             </div>
          </section>
@@ -708,7 +688,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/m.jpg" alt="">
+                              <!-- <img src="assets/img/course/" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -739,7 +719,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/y.png" alt="">
+                              <!-- <img src="assets/img/course/y.png" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -768,7 +748,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/f.webp" alt="">
+                              <!-- <img src="assets/img/course/f.webp" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -797,7 +777,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/rs.png" alt="">
+                              <!-- <img src="assets/img/course/rs.png" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -826,7 +806,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/graphic-design-2.jpg.png" alt="">
+                              <!-- <img src="assets/img/course/graphic-design-2.jpg.png" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -855,7 +835,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/e.webp" alt="">
+                              <!-- <img src="assets/img/course/e.webp" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -884,7 +864,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/image.webp" alt="">
+                              <!-- <img src="assets/img/course/image.webp" alt=""> -->
                            </a>
                         </div>
                         <div class="course__content p-relative">
