--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
                      <div class="about__content pl-70 pr-25">
                         <div class="section__title-wrapper mb-15">
                            <span class="section__title-pre">Raqamli Texnologiyalar Markazi</span>
-                           <h2 class="section__title">___________</h2>
+                           <h2 class="section__title">----</h2>
                         </div>
-                        <p>_____________________</p>
+                        <p>-------</p>
 
                         <div class="about__list mb-40">
                            <ul>
