--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/.png" alt="">
+                              <img src="assets/img/course/found.svg" alt="">
 
                            </a>
                         </div>
@@ -610,7 +610,7 @@
                               </div>
                            </div>
                         </div>
-                     </div>
+                     </div>   
                   </div>
                   <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                      <div class="course__item white-bg transition-3 mb-30">
@@ -646,7 +646,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/12.svg" alt="">
+                              <img src="assets/img/course/uxui.svg" alt="">
 
                            </a>
                         </div>
@@ -676,7 +676,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/" alt="">
+                              <img src="assets/img/course/akt.svg" alt="">
 
                            </a>
                         </div>
