--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/1.pn" alt="">
+                              <img src="assets/img/course/MOTIN.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -586,7 +586,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/2.png" alt="">
+                              <img src="assets/img/course/FRONTEND.svg" alt="">
 
                            </a>
                         </div>
@@ -616,7 +616,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <img src="assets/img/course/" alt="">
+                              <img src="assets/img/course/ROBOT.svg" alt="">
 
                            </a>
                         </div>
@@ -706,7 +706,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/" alt=""> -->
+                              <img src="assets/img/course/MOTIN.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -737,7 +737,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/y.png" alt=""> -->
+                              <img src="assets/img/course/PHYTON.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -766,7 +766,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/f.webp" alt=""> -->
+                              <img src="assets/img/course/FLUT.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -795,7 +795,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/rs.png" alt=""> -->
+                              <img src="assets/img/course/RUS.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -824,7 +824,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/graphic-design-2.jpg.png" alt=""> -->
+                              <img src="assets/img/course/GIRAFIK.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -853,7 +853,7 @@
                      <div class="course__item white-bg transition-3 mb-30">
                         <div class="course__thumb w-img fix">
                            <a href="#">
-                              <!-- <img src="assets/img/course/e.webp" alt=""> -->
+                              <img src="assets/img/course/INGLIZ TILI.svg" alt="">
                            </a>
                         </div>
                         <div class="course__content p-relative">
@@ -878,35 +878,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
-                     <div class="course__item white-bg transition-3 mb-30">
-                        <div class="course__thumb w-img fix">
-                           <a href="#">
-                              <!-- <img src="assets/img/course/image.webp" alt=""> -->
-                           </a>
-                        </div>
-                        <div class="course__content p-relative">
-                           <h3 class="course__title">
-                              <a href="#">Kompyuter Savodxonligi</a>
-                           </h3>
-                           <div class="course__bottom d-sm-flex align-items-center justify-content-between">
-                              <div class="course__tutor">
-                                 <a href="#">Mirzajonov Fayzulloh</a>
-                              </div>
-                              <div class="course__lesson">
-                                 <a href="#"><svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 12.2V4.49999C1 1.7 1.70588 1 4.52941 1H9.47059C12.2941 1 13 1.7 13 4.49999V11.5C13 11.598 13 11.696 12.9929 11.794" stroke="#49535B" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M3.01176 10.0999H13V12.5498C13 13.9008 11.8918 14.9998 10.5294 14.9998H3.47059C2.10824 14.9998 1 13.9008 1 12.5498V12.0948C1 10.9959 1.90353 10.0999 3.01176 10.0999Z" stroke="#49535B" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M4.17647 4.5H9.82353" stroke="#49535B" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M4.17647 6.94995H7.70589" stroke="#49535B" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                    3 oy
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
+              
                </div>
             </div>
          </section>
